--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background-color: #282c34;
+  background: linear-gradient(90deg, rgba(32,43,62,1), rgba(48,62,82,1));
   color: white;
 }
 
@@ -25,6 +25,7 @@
 
 .Container {
   min-height: 90vh;
+  max-width: 90vw;
   padding: 0 0.5rem;
   margin: 0 10vw;
   display: flex;
@@ -35,7 +36,7 @@
 }
 
 .InputContainer {
-  margin: 10px 0;
+  margin: 30px 0 10px 0;
   width: 100%;
 }
 
@@ -47,11 +48,13 @@
 
 .InputContainer > form > label {
   font-size: calc(5px + 1vmin);
+  padding: 10px 0;
 }
 
 .SearchBar {
-  width: 50%;
+  width: 60%;
   align-self: center;
+  box-shadow: rgba(24, 24, 27, 0.57) 7px 8px 17px -2px;
 }
 
 .HiddenSubmit {
@@ -82,6 +85,8 @@
   text-align: left;
   padding: 12px 16px;
   color: black;
+  border: none;
+  width: 100%;
 }
 
 .dropdownList button:hover {
@@ -90,6 +95,11 @@
 
 .show {
   display: block;
+}
+
+.ApiError {
+  font-size: 3rem;
+  color: red;
 }
 
 .ResultsContainer {
@@ -107,8 +117,7 @@
 
 .Grid {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  flex-flow: row wrap;
   align-items: center;
   justify-content: center;
   margin: 0;
@@ -118,15 +127,25 @@
 .Card {
   margin: 1rem;
   padding: 1.5rem;
-  border: 1px solid rgba(255,0,202,0.5);
   border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  width: 45%;
+  width: 30%;
+  max-height: 60vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-content: center;
-  background-color: black;
+  background-color: rgb(51,65,85);
+  box-shadow: rgba(24, 24, 27, 0.57) 7px 8px 17px -2px;
+}
+
+.Card > video {
+  height: 80%;
+}
+
+@media (max-width: 768px) {
+  .Card {
+    width: 90%;
+  }
 }
 
 .Card > button {
@@ -139,6 +158,14 @@ button {
   font-size: calc(5px + 1vmin);
 }
 
-.ButtonContainer {
-  padding-bottom: 40px;
+.TopButtonContainer {
+  padding-top: 20px;
+}
+
+.BottomButtonContainer {
+  padding-bottom: 20px;
+}
+
+.TopButtonContainer > button, .BottomButtonContainer > button {
+  margin: 0 10px;
 }
