--- a/src/App.css
+++ b/src/App.css
@@ -75,6 +75,8 @@
   display: none;
   position: absolute;
   min-width: 160px;
+  max-height: 300px;
+  overflow: auto;
   z-index: 1;
   background-color: #f1f1f1;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
